# cjm-transcript-vad-align

./: .gitignore  README.md  demo_app.py  html_ids.html  html_ids.html.md  index.html  index.html.md  models.html  models.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  utils.html  utils.html.md
cjm_transcript_vad_align/: _modidx.py  html_ids.py  models.py  utils.py
cjm_transcript_vad_align/components/: audio_controls.py  callbacks.py  card_stack_config.py  helpers.py  keyboard_config.py  step_renderer.py  vad_card.py
cjm_transcript_vad_align/routes/: audio.py  card_stack.py  core.py  handlers.py  init.py
cjm_transcript_vad_align/services/: alignment.py
components/: audio_controls.html  audio_controls.html.md  callbacks.html  callbacks.html.md  card_stack_config.html  card_stack_config.html.md  helpers.html  helpers.html.md  keyboard_config.html  keyboard_config.html.md  step_renderer.html  step_renderer.html.md  vad_card.html  vad_card.html.md
nbs/: html_ids.ipynb  index.ipynb  models.ipynb  nbdev.yml  utils.ipynb
nbs/components/: audio_controls.ipynb  callbacks.ipynb  card_stack_config.ipynb  helpers.ipynb  keyboard_config.ipynb  step_renderer.ipynb  vad_card.ipynb
nbs/routes/: audio.ipynb  card_stack.ipynb  core.ipynb  handlers.ipynb  init.ipynb
nbs/services/: alignment.ipynb
routes/: audio.html  audio.html.md  card_stack.html  card_stack.html.md  core.html  core.html.md  handlers.html  handlers.html.md  init.html  init.html.md
services/: alignment.html  alignment.html.md
